src/main/java/com/example/databasedesign/common/error/CustomHttpExceptionResponse.java
package com.example.databasedesign.common.error;

public record CustomHttpExceptionResponse(String message, int status) {

}